--- a/otus_java_2022_03-main/build.gradle
+++ b/otus_java_2022_03-main/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'idea'
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
-    id 'org.springframework.boot' version '2.6.6' apply false
+    id 'org.springframework.boot' version '2.7.1' apply false
     id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
     id 'com.google.cloud.tools.jib' version '3.2.1' apply false
     id 'io.freefair.lombok' version '6.4.2' apply false
@@ -29,13 +29,21 @@ allprojects {
     dependencyManagement {
         dependencies {
             imports {
-                mavenBom "org.springframework.boot:spring-boot-dependencies:2.6.6"
+                mavenBom "org.springframework.boot:spring-boot-dependencies:2.7.1"
                 mavenBom "org.testcontainers:testcontainers-bom:1.17.1"
+                mavenBom "com.google.protobuf:protobuf-bom:3.21.1"
             }
             dependency "com.google.guava:guava:${Versions.guava}"
             dependency "org.openjdk.jmh:jmh-core:${Versions.jmh}"
             dependency "org.openjdk.jmh:jmh-generator-annprocess:${Versions.jmh}"
+            dependency "org.ow2.asm:asm-commons:${Versions.asm}"
+            dependency("org.glassfish:jakarta.json:${Versions.glassfishJson}")
+            dependency("org.webjars:sockjs-client:${Versions.sockjs}")
+            dependency("org.webjars:stomp-websocket:${Versions.stomp}")
+            dependency("org.webjars:bootstrap:${Versions.bootstrap}")
+            dependency("org.springdoc:springdoc-openapi-ui:${Versions.springDocOpenapiUi}")
 
+            dependency("com.google.code.findbugs:jsr305:${Versions.jsr305}")
         }
     }
 
@@ -51,6 +59,7 @@ allprojects {
             force("org.codehaus.jackson:jackson-mapper-asl:1.8.3")
             force("org.codehaus.jettison:jettison:1.1")
             force("net.java.dev.jna:jna:5.8.0")
+            force("com.google.errorprone:error_prone_annotations:2.7.1")
         }
     }
 }
